log/build_2025-12-19_09-25-46/tower_builder/stdout_stderr.log
running egg_info
writing ../../build/tower_builder/tower_builder.egg-info/PKG-INFO
writing dependency_links to ../../build/tower_builder/tower_builder.egg-info/dependency_links.txt
writing entry points to ../../build/tower_builder/tower_builder.egg-info/entry_points.txt
writing requirements to ../../build/tower_builder/tower_builder.egg-info/requires.txt
writing top-level names to ../../build/tower_builder/tower_builder.egg-info/top_level.txt
reading manifest file '../../build/tower_builder/tower_builder.egg-info/SOURCES.txt'
writing manifest file '../../build/tower_builder/tower_builder.egg-info/SOURCES.txt'
running build
running build_py
copying tower_builder/junpyo.py -> /home/user/Jina/build/tower_builder/build/lib/tower_builder
copying tower_builder/camera_try.py -> /home/user/Jina/build/tower_builder/build/lib/tower_builder
running install
running install_lib
copying /home/user/Jina/build/tower_builder/build/lib/tower_builder/junpyo.py -> /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder
copying /home/user/Jina/build/tower_builder/build/lib/tower_builder/camera_try.py -> /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder
byte-compiling /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main.py to main.cpython-310.pyc
  File "/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/main.py", line 23
    from tower_builder.camera(ori) import BlockDetectionSystem
                             ^
SyntaxError: invalid syntax

byte-compiling /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/junpyo.py to junpyo.cpython-310.pyc
byte-compiling /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder/camera_try.py to camera_try.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/tower_builder/tower_builder.egg-info to /home/user/Jina/install/tower_builder/lib/python3.10/site-packages/tower_builder-0.0.0-py3.10.egg-info
running install_scripts
Installing cam script to /home/user/Jina/install/tower_builder/lib/tower_builder
Installing hub script to /home/user/Jina/install/tower_builder/lib/tower_builder
Installing pyo script to /home/user/Jina/install/tower_builder/lib/tower_builder
Installing rob script to /home/user/Jina/install/tower_builder/lib/tower_builder
Installing stb script to /home/user/Jina/install/tower_builder/lib/tower_builder
Installing try script to /home/user/Jina/install/tower_builder/lib/tower_builder
writing list of installed files to '/home/user/Jina/build/tower_builder/install.log'
